# gemscout

./: .env.example  .gitignore  README.md  docker-compose.yml
agent/: agent_config.yaml  requirements.txt  run_agent.sh
agent/gemscout_agent/: Procfile  __init__.py
backend/: .dockerignore  .gcloudignore  Dockerfile  pyproject.toml
backend/src/gemscout/: settings.py
backend/src/gemscout/agent/: tools.py
backend/src/gemscout/api/: main.py
backend/src/gemscout/db/: mongodb.py
backend/src/gemscout/embeddings/: voyage.py
backend/src/gemscout/valuation/: normalization.py
frontend/: Dockerfile  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.tsx  ScoutMode.tsx  index.css
mcp/: Dockerfile  mcp_config.json  package-lock.json  package.json  server.js
scripts/: atlas_pause.sh  atlas_resume.sh  generate_embeddings.py  migrate_history.py  migrate_to_mongodb.py  setup_atlas_indexes.py
